sfdx-source/force-app/main/default/objects/WorkStep/WorkStep.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>