sfdx-source/force-app/main/default/objects/WorkStep/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <description>LEM-2045: It stores link to associated Work Order&apos;s Account. It is used for embedding Account Name with link in email templates.</description>
    <formula>WorkPlan.WorkOrder.Account_Link__c</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>