sfdx-source/force-app/main/default/objects/WorkStep/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-2045: It stores Work Order&apos;s Account Name. It is used for embedding Account Name in email templates.</description>
    <formula>WorkPlan.WorkOrder.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>