sfdx-source/force-app/main/default/objects/WorkStep/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>LEM-2045: It indicates Work Order&apos;s Account owner.</description>
    <formula>WorkPlan.WorkOrder.Account_Owner_Name__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>