sfdx-source/force-app/main/default/objects/WorkStep/fields/Account_Owner_Email_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Calculated__c</fullName>
    <description>LEM-2045: It is used to populate Account_Owner_Email_Id field without querying on Account.</description>
    <formula>WorkPlan.WorkOrder.Account_Owner_Email_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Email Calculated</label>
    <type>Text</type>
</CustomField>