sfdx-source/force-app/main/default/objects/WorkStep/fields/Account_Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Id__c</fullName>
    <description>LEM-2045: It stores email address of Work Order&apos;s Account Owner for sending email alerts.</description>
    <label>Account Owner Email Id</label>
    <type>Email</type>
</CustomField>