sfdx-source/force-app/main/default/objects/WorkStep/fields/Activation_Type__c.field-meta.xml
<CustomField>
    <fullName>Activation_Type__c</fullName>
    <description>LEM-4670: It is used by Activations Team to classify the type of activation performed and report on the activated stores.</description>
    <label>Activation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None - Checklist Only</fullName>
            </value>
            <value>
                <fullName>Rep Activation</fullName>
            </value>
            <value>
                <fullName>Self-Activation</fullName>
            </value>
            <value>
                <fullName>Auto-Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>