sfdx-source/force-app/main/default/objects/WorkStep/fields/Blocked_Work_Steps_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Work_Steps_Report_Link__c</fullName>
    <description>LEM-2045: It stores link to &quot;Blocked Work Steps&quot; report. It is used for embedding the link to report in email templates.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + $CustomMetadata.Static_Configurations__mdt.Blocked_Work_Steps_Report_Id.Configuration_Value__c, $CustomMetadata.Static_Configurations__mdt.Blocked_Work_Steps_Report_Link_Name.Configuration_Value__c)</formula>
    <label>Blocked Work Steps Report Link</label>
    <type>Text</type>
</CustomField>