sfdx-source/force-app/main/default/objects/WorkStep/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <description>LEM-5727: It indicates the Id of corporate account related to the parent work order.</description>
    <formula>IF(
  ISBLANK(Parent_Work_Step__c),
  WorkOrder.Corporate_Account__c,
  WorkOrder.ParentWorkOrder.Corporate_Account__c
)</formula>
    <label>Business Account</label>
    <type>Text</type>
</CustomField>