sfdx-source/force-app/main/default/objects/WorkStep/fields/Business_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Owner__c</fullName>
    <description>LEM-2410: It is used to identify whether the current user is the owner of business Account on parent Work Order.</description>
    <formula>WorkOrder.ParentWorkOrder.Account.OwnerId = $User.Id</formula>
    <label>Business Account Owner?</label>
    <type>Checkbox</type>
</CustomField>