sfdx-source/force-app/main/default/objects/WorkStep/fields/Business_Reference__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2181 Lookup to the Business Reference Object associated to this Work Plan</description>
    <label>Business Reference</label>
    <referenceTo>Business_Reference__c</referenceTo>
    <relationshipLabel>Work Steps</relationshipLabel>
    <relationshipName>Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>