sfdx-source/force-app/main/default/objects/WorkStep/fields/Click_N_Pop_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Click_N_Pop_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13459</description>
    <label>Click N Pop Eligible</label>
    <type>Checkbox</type>
</CustomField>