sfdx-source/force-app/main/default/objects/WorkStep/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <description>LEM-964: Completed Date/Time the work step was first completed.</description>
    <inlineHelpText>Completed Date/Time the work step was first completed</inlineHelpText>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>