sfdx-source/force-app/main/default/objects/WorkStep/fields/Completed_Menu_URLs__c.field-meta.xml
<CustomField>
    <fullName>Completed_Menu_URLs__c</fullName>
    <description>LEM-793: Indicates the complete Menu URLs in Dime.</description>
    <inlineHelpText>Indicates the complete Menu URLs in Dime</inlineHelpText>
    <label>Completed Menu URLs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>