sfdx-source/force-app/main/default/objects/WorkStep/fields/Enable_Merchant_Orders_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Merchant_Orders_Creation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-22064: It indicates whether the Merchant Orders creation is enabled in the org.</description>
    <formula>WorkPlan.WorkOrder.Account.Enable_Merchant_Orders_Creation__c</formula>
    <label>Enable Merchant Orders Creation</label>
    <type>Checkbox</type>
</CustomField>