sfdx-source/force-app/main/default/objects/WorkStep/fields/Figment_Id__c.field-meta.xml
<CustomField>
    <fullName>Figment_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-1395: Case Id generated in Figment to track tablet case from Lemonade instance.</description>
    <externalId>true</externalId>
    <label>Figment Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>