sfdx-source/force-app/main/default/objects/WorkStep/fields/Figment_URL__c.field-meta.xml
<CustomField>
    <fullName>Figment_URL__c</fullName>
    <description>LEM-1395: Case URL generated in Figment to track tablet case from Lemonade instance.</description>
    <formula>IF(
    NOT(ISBLANK(Figment_Id__c)),
    HYPERLINK(
    $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLPrefix.Configuration_Value__c + Figment_Id__c + $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLSuffix.Configuration_Value__c,
    $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLPrefix.Configuration_Value__c + Figment_Id__c + $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLSuffix.Configuration_Value__c,
    &apos;&apos;
    ),
    &apos;&apos;
)</formula>
    <label>Figment URL</label>
    <type>Text</type>
</CustomField>