sfdx-source/force-app/main/default/objects/WorkStep/fields/Historical_Delay_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Historical_Delay_Reasons__c</fullName>
    <description>LEM-964: Used to report on our drivers behind activations delays. i.e. This work step was Blocked for this long and here are all of the reasons it was delayed.</description>
    <inlineHelpText>Used to report on our drivers behind activations delays. i.e. This work step was Blocked for this long and here are all of the reasons it was delayed</inlineHelpText>
    <label>Historical Delay Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account and Opportunity do not match</fullName>
            </value>
            <value>
                <fullName>Account and Opportunity is a dupe with the same location</fullName>
            </value>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Account Type is Parent</fullName>
            </value>
            <value>
                <fullName>Alcohol Addendum signed but no alcohol items on menu</fullName>
            </value>
            <value>
                <fullName>Already Active</fullName>
            </value>
            <value>
                <fullName>Appears to be Change of Ownership - Update Type</fullName>
            </value>
            <value>
                <fullName>Banking not listed in portal after S2N</fullName>
            </value>
            <value>
                <fullName>Blurry or poorly cropped menu source</fullName>
            </value>
            <value>
                <fullName>Bulk tool Failure</fullName>
            </value>
            <value>
                <fullName>Business ID mismatch in SFDC and Mint</fullName>
            </value>
            <value>
                <fullName>Catalog / Grocery account</fullName>
            </value>
            <value>
                <fullName>Catalog photo upload issue</fullName>
            </value>
            <value>
                <fullName>Closed Lost, Mx not interested in Storefront</fullName>
            </value>
            <value>
                <fullName>DM Email associated to another Business</fullName>
            </value>
            <value>
                <fullName>Doesn’t see value in own online ordering</fullName>
            </value>
            <value>
                <fullName>Do not know what Storefront is</fullName>
            </value>
            <value>
                <fullName>Duplicate Account based on Store ID, Phone, or Address</fullName>
            </value>
            <value>
                <fullName>Duplicate Onboarding Record</fullName>
            </value>
            <value>
                <fullName>Duplicate POS Integration ID - Already in Use</fullName>
            </value>
            <value>
                <fullName>Equipment Never Sent</fullName>
            </value>
            <value>
                <fullName>Escalated to Eng Team</fullName>
            </value>
            <value>
                <fullName>Escalated to TAM Team</fullName>
            </value>
            <value>
                <fullName>Fee Onboarding Error</fullName>
            </value>
            <value>
                <fullName>Final inflated prices not present</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Inactive menu</fullName>
            </value>
            <value>
                <fullName>Inactive Starting Point</fullName>
            </value>
            <value>
                <fullName>Inactive Store (MINT)</fullName>
            </value>
            <value>
                <fullName>In contract with competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>