sfdx-source/force-app/main/default/objects/WorkStep/fields/Initial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initial_Owner__c</fullName>
    <description>LEM-964: First owner of the work step.</description>
    <inlineHelpText>First owner of the work step</inlineHelpText>
    <label>Initial Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>