sfdx-source/force-app/main/default/objects/WorkStep/fields/Initial_Preparation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Preparation_Date_Time__c</fullName>
    <description>LEM-793: Indicates the date and time of initial menu preparation.</description>
    <inlineHelpText>Indicates the date and time of initial menu preparation</inlineHelpText>
    <label>Initial Preparation Date/Time</label>
    <type>DateTime</type>
</CustomField>