sfdx-source/force-app/main/default/objects/WorkStep/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2346: It is used to identify whether Work Step is updated through UI or by system. It controls Work Step status updates by EPM persona&apos;s users.</description>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>