sfdx-source/force-app/main/default/objects/WorkStep/fields/Last_Blocked_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Blocked_Date_Time__c</fullName>
    <description>LEM-964: Date/Time timestamp of the last time the work step was blocked.</description>
    <inlineHelpText>Date/Time timestamp of the last time the work step was blocked</inlineHelpText>
    <label>Last Blocked Date/Time</label>
    <type>DateTime</type>
</CustomField>