sfdx-source/force-app/main/default/objects/WorkStep/fields/Last_Escalation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Escalation_Date_Time__c</fullName>
    <description>LEM-964: Date/Time timestamp of the last time the work step was escalated.</description>
    <inlineHelpText>Date/Time timestamp of the last time the work step was escalated</inlineHelpText>
    <label>Last Escalation Date/Time</label>
    <type>DateTime</type>
</CustomField>