sfdx-source/force-app/main/default/objects/WorkStep/fields/Last_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-793: The last person who prepared the menu.</description>
    <inlineHelpText>The last person who prepared the menu</inlineHelpText>
    <label>Last Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prepared_Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>