sfdx-source/force-app/main/default/objects/WorkStep/fields/Last_QA_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_QA_Date_Time__c</fullName>
    <description>LEM-793: Indicates the date and time of last menu QA activity.</description>
    <inlineHelpText>Indicates the date and time of last menu QA activity</inlineHelpText>
    <label>Last QA Date/Time</label>
    <type>DateTime</type>
</CustomField>