sfdx-source/force-app/main/default/objects/WorkStep/fields/Last_QAed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_QAed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-793: Person who last QAed the menu.</description>
    <inlineHelpText>Person who last QAed the menu</inlineHelpText>
    <label>Last QAed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QAed_Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>