sfdx-source/force-app/main/default/objects/WorkStep/fields/Menu_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_Error_Type__c</fullName>
    <description>LEM-793: Indicates Work Step menu error type.</description>
    <label>Menu Error Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Category Sort Order</fullName>
            </value>
            <value>
                <fullName>Duplicate Category</fullName>
            </value>
            <value>
                <fullName>Duplicate Items</fullName>
            </value>
            <value>
                <fullName>Duplicate Options</fullName>
            </value>
            <value>
                <fullName>Formatting</fullName>
            </value>
            <value>
                <fullName>Incomplete Update</fullName>
            </value>
            <value>
                <fullName>Items Incorrect</fullName>
            </value>
            <value>
                <fullName>Items Missing</fullName>
            </value>
            <value>
                <fullName>Item Sort Order</fullName>
            </value>
            <value>
                <fullName>Legal - Alcohol</fullName>
            </value>
            <value>
                <fullName>Legal - Health</fullName>
            </value>
            <value>
                <fullName>Legal - THC/CBD</fullName>
            </value>
            <value>
                <fullName>Legal - Tobacco</fullName>
            </value>
            <value>
                <fullName>Literal Translation</fullName>
            </value>
            <value>
                <fullName>Menu Hours Incorrect</fullName>
            </value>
            <value>
                <fullName>Menu Hours Missing</fullName>
            </value>
            <value>
                <fullName>Menu Title Formatting</fullName>
            </value>
            <value>
                <fullName>Modifier Groups Incorrect</fullName>
            </value>
            <value>
                <fullName>Modifier Groups Missing</fullName>
            </value>
            <value>
                <fullName>Options Incorrect</fullName>
            </value>
            <value>
                <fullName>Options Missing</fullName>
            </value>
            <value>
                <fullName>Options Sort Order</fullName>
            </value>
            <value>
                <fullName>Pricing Incorrect</fullName>
            </value>
            <value>
                <fullName>Pricing Missing</fullName>
            </value>
            <value>
                <fullName>Punctuation</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Spelling</fullName>
            </value>
            <value>
                <fullName>Translation Structure</fullName>
            </value>
            <value>
                <fullName>Unnecessary Translation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>