sfdx-source/force-app/main/default/objects/WorkStep/fields/Menu_Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Menu_Preview_Link__c</fullName>
    <description>LEM-1353: Indicates DIME menu preview links. LEM-16545: Changed the data type to LongTextArea (1000 characters) for allowing the URL with length more than 255 characters.</description>
    <inlineHelpText>DIME menu preview links</inlineHelpText>
    <label>Menu Preview Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>