sfdx-source/force-app/main/default/objects/WorkStep/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>LEM-964: Used to hold notes about the work step to help other team members understand additional context.</description>
    <inlineHelpText>Used to hold notes about the work step to help other team members understand additional context</inlineHelpText>
    <label>Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>