sfdx-source/force-app/main/default/objects/WorkStep/fields/Number_of_Blocked_Work_Steps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blocked_Work_Steps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-2043: It Indicates the live number of blocked child work steps.</description>
    <inlineHelpText>Indicating live number of blocked work steps</inlineHelpText>
    <label>Number of Blocked Work Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>