sfdx-source/force-app/main/default/objects/WorkStep/fields/Number_of_Resolved_Work_Steps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resolved_Work_Steps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-2043: It indicates live number of Resolved child work steps.</description>
    <inlineHelpText>Indicating live number of Resolved work steps</inlineHelpText>
    <label>Number of Resolved Work Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>