sfdx-source/force-app/main/default/objects/WorkStep/fields/Original_Status_Reason_and_Details__c.field-meta.xml
<CustomField>
    <fullName>Original_Status_Reason_and_Details__c</fullName>
    <description>LEM-13459</description>
    <label>Original Status Reason Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>