sfdx-source/force-app/main/default/objects/WorkStep/fields/Parent_Work_Order_Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order_Creation_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15583: It indicates the Parent Work Order&apos;s Creation Source.</description>
    <formula>WorkPlan.Parent_Work_Order_Creation_Source__c</formula>
    <label>Parent Work Order Creation Source</label>
    <type>Text</type>
</CustomField>