sfdx-source/force-app/main/default/objects/WorkStep/fields/Parent_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Plan__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-22115: It indicates the parent Work Plan Id.</description>
    <formula>WorkPlan.Parent_Work_Plan__c</formula>
    <label>Parent Work Plan</label>
    <type>Text</type>
</CustomField>