sfdx-source/force-app/main/default/objects/WorkStep/fields/Parent_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-527: It is used to maintain relationship with WorkStep of Parent Work Order.</description>
    <label>Parent Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Child Work Steps</relationshipLabel>
    <relationshipName>Child_Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>