sfdx-source/force-app/main/default/objects/WorkStep/fields/Previous_Spent_Days_In_Blocked_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Spent_Days_In_Blocked_Status__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-1489: It is used to store the previous value of Time Spent in blocked (Days) field.</description>
    <label>Previous Spent Days In Blocked Status</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>