sfdx-source/force-app/main/default/objects/WorkStep/fields/Provisioning_Failure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Failure_Date_Time__c</fullName>
    <description>LEM-11238: It stores Date/Time timestamp of the first time the work step was blocked due to provisioning failure.</description>
    <label>Provisioning Failure Date/Time</label>
    <type>DateTime</type>
</CustomField>