sfdx-source/force-app/main/default/objects/WorkStep/fields/Secondary_Email_Next_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Next_Schedule__c</fullName>
    <description>LEM-2045: It indicates the scheduled time for secondary email notification on parent Work Step.</description>
    <formula>Secondary_Email_Timer_Start_Time__c + ((Value($CustomMetadata.Static_Configurations__mdt.Secondary_Email_Time_Window_In_Mins.Configuration_Value__c)/60)/24)</formula>
    <label>Secondary Email Next Schedule</label>
    <type>DateTime</type>
</CustomField>