sfdx-source/force-app/main/default/objects/WorkStep/fields/Secondary_Email_Timer_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Timer_Start_Time__c</fullName>
    <description>LEM-2045: It indicates the start time of secondary email notification on parent Work Step.</description>
    <label>Secondary Email Timer Start Time</label>
    <type>DateTime</type>
</CustomField>