sfdx-source/force-app/main/default/objects/WorkStep/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-22064: It indicates the segment of the account.</description>
    <formula>TEXT(WorkPlan.WorkOrder.Account.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>