sfdx-source/force-app/main/default/objects/WorkStep/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <description>LEM-1395: Shipping type that we will be used to manage the tablet case by the vendor.</description>
    <formula>IF(
  AND(
    CONTAINS(
      $Label.ShippingTypeCountryCriteria ,
      TEXT(Store_Account__r.BillingCountryCode)
    ),
    TEXT(Store_Account__r.Segment__c) = $Label.AccountSegmentEnterprise
  ),
  $Label.ShippingTypeExpedited,
  IF(
    TEXT(Store_Account__r.BillingCountryCode) = $Label.AccountCountryCodeNZ,
    $Label.ShippingTypeDHLNZ,
    &apos;&apos;
  )
)</formula>
    <label>Shipping Type</label>
    <type>Text</type>
</CustomField>