sfdx-source/force-app/main/default/objects/WorkStep/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>LEM-964: Start Date/Time the work step was first updated.</description>
    <inlineHelpText>Start Date/Time the work step was first updated</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>