sfdx-source/force-app/main/default/objects/WorkStep/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-977: Indicates the status of the work step.
LEM-1120: Created custom Status field to implement dependency on WorkStep Type field.</description>
    <inlineHelpText>Indicates the status of the work step</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Workable</fullName>
                <default>true</default>
                <label>Not Workable</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>QA Complete</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Complete - DoorDash to implement link</fullName>
            </value>
            <value>
                <fullName>Complete - Mx to implement link</fullName>
            </value>
            <value>
                <fullName>Complete - Implemented on the call</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Gone Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>