sfdx-source/force-app/main/default/objects/WorkStep/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1686: Indicates the overall status of the work plan based on status of the work steps.</description>
    <inlineHelpText>Indicates the overall status of the work plan based on status of the work steps</inlineHelpText>
    <label>Status Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account and Opportunity is a dupe with the same location</fullName>
            </value>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Account Type is Parent</fullName>
            </value>
            <value>
                <fullName>Alcohol addendum signed, but no alcohol on menu</fullName>
            </value>
            <value>
                <fullName>Appears to be Change of Ownership - Provide Original Store ID</fullName>
            </value>
            <value>
                <fullName>Appears to be Change of Ownership - Update Type</fullName>
            </value>
            <value>
                <fullName>Banking not listed in portal after provisioning</fullName>
            </value>
            <value>
                <fullName>Blurry or poorly cropped menu source</fullName>
            </value>
            <value>
                <fullName>Bulk Activation Failed</fullName>
            </value>
            <value>
                <fullName>Bulk P&amp;P Error</fullName>
            </value>
            <value>
                <fullName>Bulk tool Failure</fullName>
            </value>
            <value>
                <fullName>Business reference not found</fullName>
            </value>
            <value>
                <fullName>Business/Store Already Exists</fullName>
            </value>
            <value>
                <fullName>Business ID mismatch in SFDC and Mint</fullName>
            </value>
            <value>
                <fullName>Business Provisioning Failed - Please refer to Provisioning Errors tab</fullName>
            </value>
            <value>
                <fullName>Catalog / Grocery account</fullName>
            </value>
            <value>
                <fullName>Closed Lost, Mx not interested in Storefront</fullName>
            </value>
            <value>
                <fullName>Contract Format (Must be PDF)</fullName>
            </value>
            <value>
                <fullName>Contract not Signed</fullName>
            </value>
            <value>
                <fullName>Contract Unrelated to Business/Request</fullName>
            </value>
            <value>
                <fullName>COO Same Store Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Provided More Info</fullName>
            </value>
            <value>
                <fullName>DM Email associated to another Business</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t see value in own online ordering</fullName>
            </value>
            <value>
                <fullName>Do not know what Storefront is</fullName>
            </value>
            <value>
                <fullName>Drive Partner</fullName>
            </value>
            <value>
                <fullName>Duplicate Account based on Store ID, Phone, or Address</fullName>
            </value>
            <value>
                <fullName>Duplicate Onboarding Record</fullName>
            </value>
            <value>
                <fullName>Duplicate POS Integration ID - Already in Use</fullName>
            </value>
            <value>
                <fullName>Equipment Never Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>