sfdx-source/force-app/main/default/objects/WorkStep/fields/Status_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason_Details__c</fullName>
    <description>LEM-1218: Additional details related to status reason.</description>
    <inlineHelpText>Additional details related to status reason</inlineHelpText>
    <label>Status Reason Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>