sfdx-source/force-app/main/default/objects/WorkStep/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-793: Store associated to the Work Step.</description>
    <inlineHelpText>Store associated to the Work Step</inlineHelpText>
    <label>Store Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Steps</relationshipLabel>
    <relationshipName>Work_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>