sfdx-source/force-app/main/default/objects/WorkStep/fields/Tablet_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Escalation_Notes__c</fullName>
    <description>LEM-1395: Notes provided by 3rd Party Provider when the tablet case needs to be escalated.</description>
    <label>Tablet Escalation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>