sfdx-source/force-app/main/default/objects/WorkStep/fields/Tablet_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Integration_Message__c</fullName>
    <description>LEM-1395: It will be used to capture the exception message logged for the tablet case integration in Mulesoft logs.</description>
    <label>Tablet Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>